fix problem with gulp

--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Bootstrap project</title>
-        <link rel="stylesheet" href="css/font-awesome.min.css">
-        <link rel="stylesheet" href="css/bootstrap.css">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="public/buildcss/font-awesome.min.css">
+        <link rel="stylesheet" href="public/buildcss/bootstrap.css">
+        <link rel="stylesheet" href="public/build/css/main.min.css">
     </head>
     <body>
         <div id="myModal" class="modal fade">
@@ -145,8 +145,8 @@
         </div>
         
         <script type="module" src="build/js/app.min.js"></script>
-        <script src="js/jquery.min.js"></script>
-        <script src="js/popper.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
+        <script src="public/build/tools/jquery.min.js"></script>
+        <script src="public/build/tools/popper.min.js"></script>
+        <script src="public/build/tools/bootstrap.min.js"></script>
     </body>
 </html>
