--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
 
             <!-- Validation state -->
             <template id="login-view">
-                <div class="alert alert-danger alert-window" role="alert"></div>
+                <div class="alert alert-danger alert-window hide" role="alert"></div>
                 <form id="login-form" class="form-signin">
                     <h1 class="h3 mb-3 font-weight-normal">Пожалуйста войдите</h1>
                     <label for="email" class="sr-only">Email</label>
@@ -159,10 +159,9 @@
                         </div>
                     </div>  
                 </div>
-
             </form>
         </div>	
-
+;kjoh
         <script type="module" src="build/js/app.min.js"></script>
         <script src="build/tools/jquery.min.js"></script>
         <script src="build/tools/popper.min.js"></script>
