--- a/public/index.html
+++ b/public/index.html
@@ -161,11 +161,11 @@
                 </div>
             </form>
         </div>	
-;kjoh
+
         <script type="module" src="build/js/app.min.js"></script>
         <script src="build/tools/jquery.min.js"></script>
         <script src="build/tools/popper.min.js"></script>
         <script src="build/tools/bootstrap.min.js"></script>
-        <script src="build/tools/moment.js"></script>
+        <script src="build/tools/moment.min.js"></script>
     </body>
 </html>
